# rcrsr-codanna

./: .codannaignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  RCRSR-README.md  RCSR-README.md  README.md
.claude/: checkmate.json  conduct.json
.github/workflows/: release.yml
contributing/parsers/c/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  node_discovery.txt
contributing/parsers/clojure/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  node_discovery.txt
contributing/parsers/cpp/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  node_discovery.txt
contributing/parsers/csharp/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  node_discovery.txt
contributing/parsers/gdscript/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  node_discovery.txt
contributing/parsers/go/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  node_discovery.txt
contributing/parsers/java/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  node_discovery.txt
contributing/parsers/javascript/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  node_discovery.txt
contributing/parsers/kotlin/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  node_discovery.txt
contributing/parsers/lua/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  node_discovery.txt
contributing/parsers/php/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  node_discovery.txt
contributing/parsers/python/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  node_discovery.txt
contributing/parsers/rust/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  node_discovery.txt
contributing/parsers/typescript/: AUDIT_REPORT.md  GRAMMAR_ANALYSIS.md  node_discovery.txt
src/: error.rs  lib.rs  main.rs  serve_discovery.rs  serve_tls.rs  utils.rs
src/cli/: args.rs
src/cli/commands/: documents.rs  index.rs  mcp.rs  serve.rs
src/config/: defaults.rs  init.rs  mod.rs
src/documents/: config.rs  store.rs
src/indexing/: facade.rs  mod.rs  walk_config.rs  walker.rs
src/indexing/pipeline/: incremental.rs  mod.rs  phase1.rs
src/indexing/pipeline/stages/: discover.rs
src/io/: envelope.rs
src/mcp/: http_server.rs  https_server.rs  mod.rs  proxy.rs  requests.rs  server.rs  service.rs
src/mcp/tools/: admin.rs  mod.rs  search.rs  symbols.rs
src/parsing/c/: audit.rs
src/parsing/clojure/: audit.rs
src/parsing/cpp/: audit.rs
src/parsing/csharp/: audit.rs
src/parsing/gdscript/: audit.rs
src/parsing/go/: audit.rs
src/parsing/java/: audit.rs
src/parsing/javascript/: audit.rs
src/parsing/kotlin/: audit.rs  parser.rs
src/parsing/lua/: audit.rs
src/parsing/php/: audit.rs
src/parsing/python/: audit.rs  parser.rs
src/parsing/rust/: audit.rs  parser.rs
src/parsing/swift/: audit.rs
src/parsing/typescript/: audit.rs
src/storage/: error.rs  metadata.rs  persistence.rs
src/storage/tantivy/: writer.rs
src/vector/: storage.rs
src/watcher/: error.rs  hot_reload.rs  unified.rs
tests/: cli_tests.rs  force_reindex.rs  ignore_surface_tests.rs  integration_tests.rs
tests/cli/: support.rs  test_idle_shutdown.rs  test_mcp_index_info_remote_status.rs  test_plugin_commands.rs  test_serve_proxy_discovery.rs
tests/exploration/: abi15_exploration.rs  abi15_exploration_common.rs
tests/exploration/abi15_grammar_audit/: helpers.rs
tests/integration/: test_analyze_impact_grouping.rs  test_find_callers_role_filter.rs  test_find_symbols_mcp.rs  test_gdscript_mcp.rs  test_kotlin_semantic_search.rs  test_mcp_schema.rs  test_output_format.rs  test_read_symbol_and_outline_mcp.rs
