[package]
name = "codanna"
# Fork version: <upstream base>+rcrsr.<private addition counter>
#
#   0.9.23   -- the upstream release this fork is built from. Bump ONLY when
#               rebasing/merging onto a new upstream release, and reset the
#               counter to .1 when you do.
#   +rcrsr.N -- N increments once per private addition landed on top of that
#               base. Surfaces in `codanna --version` and, via
#               CARGO_PKG_VERSION, in the MCP `initialize` handshake, so a
#               connected client reports exactly which build it is talking to.
#
# `+` is BUILD METADATA, which semver ignores in precedence: every +rcrsr.N
# compares EQUAL to a bare 0.9.23, and +rcrsr.7 does NOT sort above +rcrsr.1.
# That is deliberate -- a `-rcrsr` pre-release would instead sort BELOW 0.9.23,
# making a fork with strictly more code compare as older than the upstream it
# was built from. The counter is informational, not orderable. Do not rely on
# it for version-range gating.
version = "0.9.23+rcrsr.1"
authors = ["Angel Bartolli <bartolli@gmail.com>"]
edition = "2024"
description = "Code Intelligence for Large Language Models"
documentation = "https://docs.rs/codanna"
homepage = "https://github.com/bartolli/codanna"
repository = "https://github.com/bartolli/codanna"
license = "Apache-2.0"
readme = "README.md"
keywords = ["mcp-server", "code-intelligence", "semantic-search", "llm", "rag"]
categories = ["development-tools", "command-line-utilities", "parsing", "text-processing", "compilers"]
autoexamples = false
exclude = [".github/", "contributing/", "tests/", "docs/"]

[package.metadata.binstall]
pkg-fmt = "txz"
bin-dir = "{ name }-{ version }-{ target-family }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-linux-x64.tar.xz"
bin-dir = "{ name }-{ version }-linux-x64/{ bin }"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-macos-x64.tar.xz"
bin-dir = "{ name }-{ version }-macos-x64/{ bin }"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-macos-arm64.tar.xz"
bin-dir = "{ name }-{ version }-macos-arm64/{ bin }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-windows-x64.zip"
pkg-fmt = "zip"
bin-dir = "{ name }-{ version }-windows-x64/{ bin }{ binary-ext }"

[dependencies]
anyhow = "1.0.103"
bitflags = "2.13.0"
clap = { version = "4.6.1", features = ["derive", "color", "env"] }
crossbeam-channel = "0.5.15"
dashmap = "6.2.1"
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
ignore = "0.4.27"
memmap2 = "0.9.11"
notify = "8.2.0"
num_cpus = "1.17.0"
parking_lot = "0.12.5"
rayon = "1.12.0"
# transport-streamable-http-client-reqwest gives the stdio<->HTTP proxy (src/mcp/proxy.rs) a
# reqwest::Client that implements rmcp's StreamableHttpClient trait, so it can dial the loopback
# backing "codanna serve --http" without a hand-rolled HTTP client (pulls in rmcp's own reqwest dep).
rmcp = { version = "2.1.0", features = ["server", "client", "transport-io", "transport-child-process", "transport-streamable-http-server", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "transport-worker"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
hex = "0.4"
tantivy = "0.26.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = { version = "1.1.2", features = ["preserve_order"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tree-sitter = "0.26.10"
tree-sitter-go = "0.25.0"
tree-sitter-gdscript = "6.1.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-kotlin-codanna = "0.3.9"
tree-sitter-php = "0.24.1"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5.0"
# Pinned: fastembed >=5.7 uses ort 2.0.0-rc.11 (ONNX Runtime 1.23) whose
# prebuilt binaries require glibc 2.38+. Homebrew Linux CI runs Ubuntu 22.04
# (glibc 2.35), so the bottle build fails with undefined __isoc23_strtol.
# Upgrade when ort ships glibc 2.35 binaries or Homebrew moves to Ubuntu 24.04.
fastembed = "=5.6.0"
rand = "0.10.2"
indicatif = "0.18.6"
comfy-table = "7.2.2"
console = "0.16.4"
owo-colors = "4.3.0"
axum = { version = "0.8.9", optional = true }
tower = { version = "0.5.3", optional = true }
tower-http = { version = "0.7.0", features = ["cors"], optional = true }
serde_urlencoded = "0.7"
tokio-util = "0.7.18"
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"], optional = true }
rustls = { version = "0.23.41", default-features = false, features = ["ring"], optional = true }
rcgen = { version = "0.14.8", optional = true }
is-terminal = "0.4.17"
regex = "1.12.4"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cpp = "0.23.4"
chrono = "0.4.45"
tempfile = "3.27.0"
serde_json5 = "0.2.1"
tree-sitter-swift = "0.7.3"
tree-sitter-lua = "0.5.0"
tree-sitter-clojure-orchard = "0.2.5"
glob = "0.3.3"
async-trait = "0.1.89"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# rmcp's `impl StreamableHttpClient for reqwest::Client` is against reqwest 0.13
# (rmcp 2.1.0 -> reqwest 0.13.4). The 0.12 dep above is a DIFFERENT crate instance
# and its Client does not implement that trait. Renamed so both can coexist.
rmcp_reqwest = { package = "reqwest", version = "0.13", default-features = false }
sysinfo = "0.39.5"
indexmap = { version = "2.14.0", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
ort = { version = "=2.0.0-rc.10", default-features = false }
testcontainers = "0.27.3"
thread-id = "5.1.0"

[features]
default = ["http-server"]
http-server = ["axum", "tower", "tower-http"]
# reqwest 0.13's `rustls` feature selects aws-lc-rs as the crypto provider. codanna
# pins `rustls` (above) to `ring` only. If rmcp_reqwest also enabled aws-lc-rs, two
# competing default CryptoProviders would coexist in the same rustls instance, and
# CryptoProvider::get_default_or_install_from_crate_features() would return None,
# causing a runtime panic in `serve --https` and in semantic/remote.rs. Use
# `rustls-no-provider` (no bundled crypto backend) so `ring` (pinned above) remains
# the sole provider. Do NOT change this to `rustls`.
#
# `rmcp_reqwest/rustls-no-provider` is required by `serve_tls::pinned_client`
# (the cert-pinned client used to dial a `--https` backing server), which calls
# `ClientBuilder::tls_certs_only`, gated behind reqwest's `__tls` feature --
# without a TLS backend enabled here that method does not exist at all. Wiring
# this feature in requires the one-time
# `rustls::crypto::ring::default_provider().install_default()` call described
# above, or every `reqwest::Client` built through rmcp's streamable-HTTP
# transport (including the plain `--http` proxy path, which never touches
# `serve_tls`) panics with "No rustls crypto provider is configured" the first
# time one is built in the process. `main.rs` makes that install call, once,
# before any command dispatch, so every `reqwest::Client` construction site in
# the process is covered by the same installed provider, whether it is built
# via `serve --https`, the stdio<->HTTP proxy, or `serve_tls::pinned_client`.
https-server = ["http-server", "axum-server", "rustls", "rcgen", "rmcp_reqwest/rustls-no-provider"]
axum = ["dep:axum"]
tower = ["dep:tower"]
tower-http = ["dep:tower-http"]
axum-server = ["dep:axum-server"]
rustls = ["dep:rustls"]
rcgen = ["dep:rcgen"]

[profile.release]
# opt-level = 3
# lto = true
# codegen-units = 1
# strip = true

[[example]]
name = "simple_progress_demo"
path = "examples/simple_progress_demo.rs"

[[example]]
name = "dump_edges"
path = "examples/dump_edges.rs"

[[example]]
name = "pipeline_metrics_demo"
path = "examples/pipeline_metrics_demo.rs"

[[bench]]
name = "unified_output_bench"
harness = false

[[bench]]
name = "kotlin_parser_bench"
harness = false
